@@ -4,6 +4,7 @@
     command, for some examples, see:
     https://github.com/ContinuumIO/conda-recipes
   * fixed bug in conda install --force
+  * conda update command no longer uses anaconda as default package name
   * added application API to conda.api module
   * add -c/--channel and --override-channels flags (issue 121).
   * add default and system meta-channels, for use in .condarc and with -c
